text overflow problem fixing

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -1,6 +1,6 @@
 .about {
     background-color: #2394df;
-    height: 100vh;
+    // height: 100vh;
     color: #e0e0e0;
     overflow: hidden;
     
